--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,10 @@
             <artifactId>annotations-java5</artifactId>
             <version>17.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
