--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,7 +50,7 @@ spring:
     view:
       prefix: classpath:/templates/
       suffix: .html
-    static-path-pattern: /public
+    static-path-pattern: /**
     throw-exception-if-no-handler-found: true   #出现错误时, 直接抛出异常(便于异常统一处理，否则捕获不到404)
     #不要为我们工程中的资源文件建立映射
     resources:
