--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,10 @@
         <druid-starter.version>1.1.10</druid-starter.version>
         <elasticsearch.version>2.3.4</elasticsearch.version>
         <swagger2.version>2.9.2</swagger2.version>
+        <hbase-spring-boot>1.0.0.RELEASE</hbase-spring-boot>
+        <spring-data-hadoop-boot>2.4.0.RELEASE</spring-data-hadoop-boot>
+        <spring-data-hadoop>2.4.0.RELEASE</spring-data-hadoop>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -105,10 +107,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-cache</artifactId>-->
-        <!--</dependency>-->
         <!-- ehcache 缓存 -->
         <!-- https://mvnrepository.com/artifact/net.sf.ehcache/ehcache -->
         <dependency>
@@ -163,6 +161,58 @@
             <groupId>com.cache</groupId>
             <artifactId>cache</artifactId>
             <version>1.0.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-hadoop-boot -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-hadoop-boot</artifactId>
+            <version>${spring-data-hadoop-boot}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-hadoop -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-hadoop</artifactId>
+            <version>${spring-data-hadoop}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>2.1.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!--elasticsearch-->
@@ -250,7 +300,7 @@
                 <configuration>
                     <!-- 不打包资源文件（配置文件和依赖包分开） -->
                     <excludes>
-                       <exclude>application*.yml</exclude>  <!-- 业务jar中过滤applicationproperties文件，在jar包外控制 -->
+                           <exclude>application*.yml</exclude>  <!-- 业务jar中过滤applicationproperties文件，在jar包外控制 -->
                     </excludes>
                     <archive>
                         <!-- 生成的jar中，不要包含pom.xml和pom.properties这两个文件 -->
@@ -321,47 +371,47 @@
             <!--后台打包程序 mvn clean package appassembler:assemble-->
             <!--用于自动生成windows linux启动脚本-->
             <!--<plugins>-->
-                <!--<groupId>org.codehaus.mojo</groupId>-->
-                <!--<artifactId>appassembler-maven-plugins</artifactId>-->
-                <!--<version>2.1.0</version>-->
-                <!--<configuration>-->
-                    <!--&lt;!&ndash; 生成linux, windows两种平台的执行脚本 &ndash;&gt;-->
-                    <!--<platforms>-->
-                        <!--<platform>unix</platform>-->
-                        <!--<platform>windows</platform>-->
-                    <!--</platforms>-->
-                    <!--&lt;!&ndash; 包存放的根目录 &ndash;&gt;-->
-                    <!--<assembleDirectory>${project.build.directory}/app</assembleDirectory>-->
-                    <!--&lt;!&ndash; 打包的jar，以及maven依赖的jar存放目录 &ndash;&gt;-->
-                    <!--<repositoryName>lib</repositoryName>-->
-                    <!--&lt;!&ndash; lib目录中jar的存放规则，默认是${groupId}/${artifactId}的目录格式，flat表示直接把jar放到lib目录 &ndash;&gt;-->
-                    <!--<repositoryLayout>flat</repositoryLayout>-->
-                    <!--&lt;!&ndash; 可执行脚本的存放目录 &ndash;&gt;-->
-                    <!--<binFolder>bin</binFolder>-->
-                    <!--&lt;!&ndash; 配置文件的存放目录 &ndash;&gt;-->
-                    <!--<configurationDirectory>config</configurationDirectory>-->
-                    <!--&lt;!&ndash; 拷贝配置文件到上面的目录中 &ndash;&gt;-->
-                    <!--&lt;!&ndash;<copyConfigurationDirectory>true</copyConfigurationDirectory>&ndash;&gt;-->
-                    <!--&lt;!&ndash; 从哪里拷贝配置文件 (默认src/main/config) &ndash;&gt;-->
-                    <!--&lt;!&ndash;<configurationSourceDirectory>src/main/resources</configurationSourceDirectory>&ndash;&gt;-->
-                    <!--<encoding>UTF-8</encoding>-->
-                    <!--<logsDirectory>logs</logsDirectory>-->
-                    <!--<tempDirectory>tmp</tempDirectory>-->
-                    <!--<programs>-->
-                        <!--<program>-->
-                            <!--<id>startup</id>-->
-                            <!--&lt;!&ndash; 启动类 &ndash;&gt;-->
-                            <!--<mainClass>com.example.demo.Application</mainClass>-->
-                            <!--<jvmSettings>-->
-                                <!--<extraArguments>-->
-                                    <!--<extraArgument>-server</extraArgument>-->
-                                    <!--<extraArgument>-Xmx1G</extraArgument>-->
-                                    <!--<extraArgument>-Xms1G</extraArgument>-->
-                                <!--</extraArguments>-->
-                            <!--</jvmSettings>-->
-                        <!--</program>-->
-                    <!--</programs>-->
-                <!--</configuration>-->
+            <!--<groupId>org.codehaus.mojo</groupId>-->
+            <!--<artifactId>appassembler-maven-plugins</artifactId>-->
+            <!--<version>2.1.0</version>-->
+            <!--<configuration>-->
+            <!--&lt;!&ndash; 生成linux, windows两种平台的执行脚本 &ndash;&gt;-->
+            <!--<platforms>-->
+            <!--<platform>unix</platform>-->
+            <!--<platform>windows</platform>-->
+            <!--</platforms>-->
+            <!--&lt;!&ndash; 包存放的根目录 &ndash;&gt;-->
+            <!--<assembleDirectory>${project.build.directory}/app</assembleDirectory>-->
+            <!--&lt;!&ndash; 打包的jar，以及maven依赖的jar存放目录 &ndash;&gt;-->
+            <!--<repositoryName>lib</repositoryName>-->
+            <!--&lt;!&ndash; lib目录中jar的存放规则，默认是${groupId}/${artifactId}的目录格式，flat表示直接把jar放到lib目录 &ndash;&gt;-->
+            <!--<repositoryLayout>flat</repositoryLayout>-->
+            <!--&lt;!&ndash; 可执行脚本的存放目录 &ndash;&gt;-->
+            <!--<binFolder>bin</binFolder>-->
+            <!--&lt;!&ndash; 配置文件的存放目录 &ndash;&gt;-->
+            <!--<configurationDirectory>config</configurationDirectory>-->
+            <!--&lt;!&ndash; 拷贝配置文件到上面的目录中 &ndash;&gt;-->
+            <!--&lt;!&ndash;<copyConfigurationDirectory>true</copyConfigurationDirectory>&ndash;&gt;-->
+            <!--&lt;!&ndash; 从哪里拷贝配置文件 (默认src/main/config) &ndash;&gt;-->
+            <!--&lt;!&ndash;<configurationSourceDirectory>src/main/resources</configurationSourceDirectory>&ndash;&gt;-->
+            <!--<encoding>UTF-8</encoding>-->
+            <!--<logsDirectory>logs</logsDirectory>-->
+            <!--<tempDirectory>tmp</tempDirectory>-->
+            <!--<programs>-->
+            <!--<program>-->
+            <!--<id>startup</id>-->
+            <!--&lt;!&ndash; 启动类 &ndash;&gt;-->
+            <!--<mainClass>com.example.demo.Application</mainClass>-->
+            <!--<jvmSettings>-->
+            <!--<extraArguments>-->
+            <!--<extraArgument>-server</extraArgument>-->
+            <!--<extraArgument>-Xmx1G</extraArgument>-->
+            <!--<extraArgument>-Xms1G</extraArgument>-->
+            <!--</extraArguments>-->
+            <!--</jvmSettings>-->
+            <!--</program>-->
+            <!--</programs>-->
+            <!--</configuration>-->
             <!--</plugins>-->
         </plugins>
     </build>
