--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,12 @@
             <artifactId>ehcache</artifactId>
             <version>2.10.6</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.apache.avalon.framework/avalon-framework-api -->
+        <dependency>
+            <groupId>org.apache.avalon.framework</groupId>
+            <artifactId>avalon-framework-api</artifactId>
+            <version>4.3.1</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/xerces/xercesImpl -->
         <dependency>
             <groupId>xerces</groupId>
@@ -142,6 +147,12 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${swagger2.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
@@ -153,6 +164,20 @@
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib</artifactId>
             <version>0.9</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>log4j</artifactId>
+                    <groupId>log4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>xercesImpl</artifactId>
+                    <groupId>xerces</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--导入自定义jar包-->
         <!--CacheDB-->
@@ -163,64 +188,8 @@
             <version>1.0.0</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-hadoop-boot -->
-        <!-- 通用的hadoop maven引用
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-hadoop-boot</artifactId>
-            <version>${spring-data-hadoop-boot}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        -->
-        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-hadoop -->
-        <!-- 通用的hadoop maven引用
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-hadoop</artifactId>
-            <version>${spring-data-hadoop}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-log4j12</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        -->
-        <!-- 通用的hadoop maven引用
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-client</artifactId>
-            <version>2.1.3</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-log4j12</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        -->
         <!-- hua wei hadoop start-->
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections</artifactId>
@@ -240,18 +209,21 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
             <version>2.7.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>servlet-api</artifactId>
+                    <groupId>javax.servlet</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs-client</artifactId>
             <version>2.7.2</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
-
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -262,13 +234,6 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>1.3.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
-
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
@@ -310,31 +275,46 @@
             <artifactId>zookeeper</artifactId>
             <version>3.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.6</version>
+        </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.htrace/htrace-core -->
+
         <dependency>
             <groupId>org.apache.htrace</groupId>
             <artifactId>htrace-core</artifactId>
             <version>3.1.0-incubating</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>2.5.0</version>
         </dependency>
-        <!-- hua wei hadoop end -->
 
         <!--elasticsearch-->
         <dependency>
             <groupId>io.searchbox</groupId>
             <artifactId>jest</artifactId>
             <version>2.4.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
             <version>${elasticsearch.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
@@ -432,6 +412,9 @@
                         <include>com/example/demo/**</include>
                         <include>mapper/**/*.xml</include>
                         <include>*.xml</include>
+                        <include>static/**</include>
+                        <include>templates/**</include>
+                        <include>conf/**</include>
                     </includes>
                 </configuration>
             </plugin>
@@ -483,62 +466,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!--用于自动生成windows linux启动脚本 mvn clean package appassembler:assemble -->
-<!--            <plugin>-->
-<!--                <groupId>org.codehaus.mojo</groupId>-->
-<!--                <artifactId>appassembler-maven-plugins</artifactId>-->
-<!--                <version>2.1.0</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>Make Assembly</id>-->
-<!--                        <phase>package</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>assemble</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--                <configuration>-->
-<!--                    &lt;!&ndash; 生成linux, windows两种平台的执行脚本 &ndash;&gt;-->
-<!--                    <platforms>-->
-<!--                        <platform>unix</platform>-->
-<!--                        <platform>windows</platform>-->
-<!--                    </platforms>-->
-<!--                    &lt;!&ndash; 打包的jar，以及maven依赖的jar放到这个目录里面 &ndash;&gt;-->
-<!--                    <repositoryName>lib</repositoryName>-->
-<!--                    &lt;!&ndash; 可执行脚本的目录 &ndash;&gt;-->
-<!--                    <binFolder>bin</binFolder>-->
-<!--                    &lt;!&ndash; 配置文件的存放目录 &ndash;&gt;-->
-<!--                    <configurationDirectory>config</configurationDirectory>-->
-<!--                    &lt;!&ndash; 拷贝配置文件到上面的目录中 &ndash;&gt;-->
-<!--                    <copyConfigurationDirectory>true</copyConfigurationDirectory>-->
-<!--                    &lt;!&ndash; 从哪里拷贝配置文件 (默认src/main/config) &ndash;&gt;-->
-<!--                    <configurationSourceDirectory>src/main/resources</configurationSourceDirectory>-->
-<!--                    &lt;!&ndash; lib目录中jar的存放规则，默认是${groupId}/${artifactId}的目录格式，flat表示直接把jar放到lib目录 &ndash;&gt;-->
-<!--                    <repositoryLayout>flat</repositoryLayout>-->
-<!--                    <encoding>UTF-8</encoding>-->
-<!--                    <logsDirectory>logs</logsDirectory>-->
-<!--                    &lt;!&ndash; 生成脚本的后缀 &ndash;&gt;-->
-<!--                    <binFileExtensions>-->
-<!--                        <unix>.sh</unix>-->
-<!--                    </binFileExtensions>-->
-<!--                    <tempDirectory>tmp</tempDirectory>-->
-<!--                    <programs>-->
-<!--                        <program>-->
-<!--                            <id>startup</id>-->
-<!--                            &lt;!&ndash; 启动类 &ndash;&gt;-->
-<!--                            <mainClass>com.example.demo.Application</mainClass>-->
-<!--                            <jvmSettings>-->
-<!--                                <extraArguments>-->
-<!--                                    <extraArgument>-server</extraArgument>-->
-<!--                                    <extraArgument>-Xmx1G</extraArgument>-->
-<!--                                    <extraArgument>-Xms1G</extraArgument>-->
-<!--                                </extraArguments>-->
-<!--                            </jvmSettings>-->
-<!--                        </program>-->
-<!--                    </programs>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
         </plugins>
         <resources>
             <resource>
@@ -553,7 +480,7 @@
                     <include>templates/**</include>
                     <include>*.xml</include>
                     <include>*.properties</include>
-                    <include>huaweiconf/**</include>
+                    <include>conf/**</include>
                 </includes>
             </resource>
         </resources>
