--- a/src/main/resources/table.properties
+++ b/src/main/resources/table.properties
@@ -1,8 +1,8 @@
-Patient=CB
-MedicalRecord=AL
-MedicalRecordHomePage=AM
-MedicalRecordHomePagePluse=AM
-MedicalRecordHomePageThird=BA
+patient=CB
+medicalrecord=AL
+medicalrecordhomepage=AM
+medicalrecordhomepagepluse=AN
+edicalRecordHomePageThird=BA
 ResidentAdmitNote=BM
 DischargeRecord=AF
 FirstCourse=AH
