--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.5.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
@@ -16,11 +16,12 @@
     <properties>
         <java.version>1.8</java.version>
         <druid-starter.version>1.1.10</druid-starter.version>
-        <elasticsearch.version>2.3.4</elasticsearch.version>
         <swagger2.version>2.9.2</swagger2.version>
         <hbase-spring-boot>1.0.0.RELEASE</hbase-spring-boot>
         <spring-data-hadoop-boot>2.4.0.RELEASE</spring-data-hadoop-boot>
         <spring-data-hadoop>2.4.0.RELEASE</spring-data-hadoop>
+        <hadoop.version>3.1.1</hadoop.version>
+        <hbase.version>1.3.1</hbase.version>
     </properties>
     <dependencies>
         <dependency>
@@ -31,10 +32,10 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-logging</artifactId>
                 </exclusion>
-<!--                <exclusion>-->
-<!--                    <groupId>org.springframework.boot</groupId>-->
-<!--                    <artifactId>spring-boot-starter-tomcat</artifactId>-->
-<!--                </exclusion>-->
+                <!--                <exclusion>-->
+                <!--                    <groupId>org.springframework.boot</groupId>-->
+                <!--                    <artifactId>spring-boot-starter-tomcat</artifactId>-->
+                <!--                </exclusion>-->
             </exclusions>
         </dependency>
 <!--        <dependency>-->
@@ -192,7 +193,7 @@
             <artifactId>sqljdbc4</artifactId>
             <version>1.0.0</version>
         </dependency>
-        <!-- hua wei hadoop start-->
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>gsjdbc4</artifactId>
@@ -202,86 +203,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-auth</artifactId>
-            <version>2.7.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
-            <version>2.7.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-hdfs</artifactId>
-            <version>2.7.2</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>guava</artifactId>
-                    <groupId>com.google.guava</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>servlet-api</artifactId>
-                    <groupId>javax.servlet</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-hdfs-client</artifactId>
-            <version>2.7.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-mapreduce-client-core</artifactId>
-            <version>2.7.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-client</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-common</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-fi-secondaryindex</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbas-hindex</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-protocol</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-server</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbaseFileStream</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.huawei.hadoop</groupId>
-            <artifactId>dynalogger</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.huawei.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-            <version>3.5.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -301,29 +222,7 @@
             <version>2.5.0</version>
         </dependency>
 
-        <!--elasticsearch-->
-        <dependency>
-            <groupId>io.searchbox</groupId>
-            <artifactId>jest</artifactId>
-            <version>2.4.0</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>guava</artifactId>
-                    <groupId>com.google.guava</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.elasticsearch</groupId>
-            <artifactId>elasticsearch</artifactId>
-            <version>${elasticsearch.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>guava</artifactId>
-                    <groupId>com.google.guava</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
@@ -356,6 +255,11 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.dhcc.csmsearch</groupId>
+            <artifactId>huawei-elasticsearch</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -423,12 +327,8 @@
                         <include>static/**</include>
                         <include>templates/**</include>
                         <include>conf/**</include>
-                        <include>jaas.conf</include>
-                        <include>krb5.conf</include>
-                        <include>user.keytab</include>
-                        <include>core-site.xml</include>
-                        <include>hdfs-site.xml</include>
-                        <include>hbase-site.xml</include>
+                        <include>*.conf</include>
+                        <include>*.keytab</include>
                     </includes>
                 </configuration>
             </plugin>
