--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <spring-data-hadoop>2.4.0.RELEASE</spring-data-hadoop>
         <hadoop.version>3.1.1</hadoop.version>
         <hbase.version>1.3.1</hbase.version>
+        <elasticsearch.version>6.7.1</elasticsearch.version>
     </properties>
     <dependencies>
         <dependency>
@@ -188,7 +189,6 @@
         </dependency>
         <!--导入自定义jar包-->
         <!--CacheDB-->
-
         <dependency>
             <groupId>com.intersys</groupId>
             <artifactId>cachedb</artifactId>
@@ -239,11 +239,45 @@
             <groupId>com.dhcc.csmsearch</groupId>
             <artifactId>huawei-elasticsearch</artifactId>
             <version>2.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.elasticsearch.client</groupId>
+                    <artifactId>transport</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.elasticsearch.plugin</groupId>
+                    <artifactId>transport-netty4-client</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.dhcc.csmsearch</groupId>
             <artifactId>csmsearch-export</artifactId>
             <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>transport</artifactId>
+            <version>${elasticsearch.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.elasticsearch.plugin</groupId>
+                    <artifactId>transport-netty4-client</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.elasticsearch</groupId>
+                    <artifactId>elasticsearch</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.plugin</groupId>
+            <artifactId>transport-netty4-client</artifactId>
+            <version>${elasticsearch.version}</version>
         </dependency>
     </dependencies>
 
