修改批量导入程序

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -141,6 +141,7 @@ spring:
 elastic-mapper:
   onMapper: true
   onCache: true  # 系统启动时预先缓存字典类型
+  defaultIndex: csmsearch
 
 management:
     health:
